--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 systemProp.selenide.browser = chrome
-systemProp.selenide.startMaximized = false
+systemProp.selenide.startMaximized = true
 systemProp.selenide.baseUrl = http://automationpractice.com/index.php
 systemProp.chromeoptions.args = --disable-infobars,--disable-notifications
 systemProp.selenide.screenshots = false
 systemProp.selenide.savePageSource = false
 systemProp.selenide.timeout = 7000
 systemProp.selenide.fastSetValue = true
-systemProp.selenide.headless = true
+systemProp.selenide.headless = false
 systemProp.selenide.holdBrowserOpen = false
