--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ gradle-app.setting
 .idea/workspace.xml
 .idea/encodings.xml
 .idea/workspace.xml
+.idea/workspace.xml
+video/first_test_recording_2019_28_02_14_22_46.avi
