--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id "io.qameta.allure" version '2.7.0'
-    id 'com.adarshr.test-logger' version '1.6.0'
+    //id 'com.adarshr.test-logger' version '1.6.0'
 }
 
 group 'store.ua'
@@ -18,19 +18,26 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
     compile group: 'com.codeborne', name: 'selenide', version: '5.1.0'
     compile group: 'io.qameta.allure', name: 'allure-selenide', version: '2.10.0'
-
     compile group: 'com.automation-remarks', name: 'video-recorder-junit5', version: '1.+'
+
+    testCompile "org.testcontainers:testcontainers:1.10.6"
+    testCompile "org.testcontainers:junit-jupiter:1.10.6"
+    testCompile group: 'org.testcontainers', name: 'selenium', version: '1.10.6'
 }
 
 test {
     testLogging.showStandardStreams = true
+    reports.html.enabled = false
     useJUnitPlatform {
         excludeTags 'slow'
         testLogging {
             events "PASSED", "SKIPPED", "FAILED"
+            showStandardStreams = true
             exceptionFormat = 'full'
         }
     }
+
+    outputs.upToDateWhen { false }
 }
 
 task fastTest(type: Test) {
@@ -77,6 +84,8 @@ test {
 }
  */
 
+/*
+
 testlogger {
     theme 'mocha-parallel'
     slowThreshold 1  // ms for test running. set to 1ms for all tests time count in console.
@@ -89,3 +98,12 @@ testlogger {
     showSkippedStandardStreams true
     showFailedStandardStreams true
 }
+
+ */
+
+/*
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.3'
+}
+ */
+
