--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ gradle-app.setting
 .idea/workspace.xml
 .idea/workspace.xml
 video/first_test_recording_2019_28_02_14_22_46.avi
+.idea/workspace.xml
