--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ gradle-app.setting
 .idea/workspace.xml
 video/first_test_recording_2019_28_02_14_22_46.avi
 .idea/workspace.xml
+.DS_Store
+.idea/workspace.xml
+.DS_Store
+.idea/workspace.xml
