--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ video/first_test_recording_2019_28_02_14_22_46.avi
 .idea/workspace.xml
 .idea/workspace.xml
 .idea/workspace.xml
+.idea/workspace.xml
